fixed overlapping colors

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -128,7 +128,7 @@ h6 {
 }
 
 nav ul li:hover {
-   background-color: #1B779B;
+   background-color: white;
 }
 
 .white-text li a{
@@ -183,10 +183,10 @@ footer.page-footer {
   min-height: 600px;
 }
 
-.welcome {
-  background-color: #145872;
-  font-size: 50px;
-}
+// .welcome {
+//   background-color: #145872;
+//   font-size: 50px;
+// }
 
 #welcome {
   background-color: #145872;
@@ -195,54 +195,49 @@ footer.page-footer {
   padding-top: 20px;
 }
 
-.projects {
-  background-color: #085463;
-}
+// .projects {
+//   background-color: #085463;
+// }
 
 #projects {
   background-color: #085463;
   padding-bottom: 50px;
-  padding-top: 20px;
 }
 
-.languages {
-  background-color: #145F72;
-}
+// .languages {
+//   background-color: #145F72;
+// }
 
 #languages {
   background-color: #145F72;
   padding-bottom: 50px;
-  padding-top: 20px;
 }
 
-.work  {
-  background-color: #08415C;
-}
+// .work  {
+//   background-color: #08415C;
+// }
 
 #work  {
   background-color: #08415C;
   padding-bottom: 50px;
-  padding-top: 20px;
 }
 
-.education {
-  background-color: #033F63;
-}
+// .education {
+//   background-color: #033F63;
+// }
 
 #education {
   background-color: #033F63;
   padding-bottom: 50px;
-  padding-top: 20px;
 }
 
-.about {
-  background-color: #112E4F;
-}
+// .about {
+//   background-color: #112E4F;
+// }
 
 #about {
   background-color: #112E4F;
   padding-bottom: 50px;
-  padding-top: 20px;
 }
 
 div.credit {
